--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: SSH into EC2 and pull changes
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1 
+
+    - name: Run deployment commands on EC2 using SSM
       run: |
-        ssh -i ${{ secrets.AWS_PRIVATE_KEY }} ubuntu@3.15.203.47 << 'EOF'
-          cd fastapi-book-project
-          git pull origin main
-          sudo systemctl restart fastapi
-        EOF
+        aws ssm send-command \
+          --document-name "AWS-RunShellScript" \
+          --targets "Key=instance-id,Values=${{ secrets.AWS_INSTANCE_ID }}" \
+          --parameters 'commands=["cd /home/ubuntu/fastapi-book-project && git pull origin main && sudo systemctl restart fastapi"]' \
+          --region us-east-1
