--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh -i ~/.ssh/aws-key.pem -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
-            cd /home/fastapi-book-project
-            git pull origin main
             source env/bin/activate
+            cd ~/fastapi-book-project
+            git pull origin main
             pip install -r requirements.txt
             sudo systemctl restart fastapi
             sudo systemctl restart nginx
